fix flex spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .screen-default {
-    @apply bg-dark h-[667px] w-[375px] m-0 p-0 fixed;
+    @apply bg-dark h-screen w-screen m-0 p-0 fixed;
   }
   .text-title {
     font-weight: 700;
